--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
+body {
+    background-color: rgb(10, 45, 6);
+    color: rgb(5, 35, 14);
+    font-family: 'Itim', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+    background-color: #199f28;
+    padding: 25px 100px;
+    font-size: 25px;
+    border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+    background-color: #53d95e;
+    padding: 25px 40px;
+    font-size: 16px;
+    border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input,button, output {
+    padding: 15px 2.5%;
+    font-family: 'Itim', cursive;
+    border: 0;
+    color: rgb(5, 35, 14);
+    background: #8bef97;
+    outline: none;
+    font-size: 16px;
+    border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.inputForm{
+    background-color: #53d95e;
+    padding: 25px 40px;
+    border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    background: #199f28;
+    cursor: pointer;
+    transition: transform 500ms ease;
 }
+
+button:hover{
+    transform: scale(1.1);
+}
+
+output, button{
+    margin-left: 1%;
+}
+
